--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
-  <head miniApp.setHeaderColor('#fcb69f');>
+  <head>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script>
+    Telegram.WebApp.expand();
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script>
-    Telegram.WebApp.expand();
-</script>
   </head>
   <body>
     <div id="root"></div>
